# vpx-scoretracker-plugin

./: .gitignore  B2STracker.cpp  B2STracker.h  CMakeLists_plugin_ScoreTracker.txt  LICENSE  NvramTracker.cpp  NvramTracker.h  PluginMain.cpp  README.md  ScoreSignature.cpp  ScoreSignature.h  ScoreSigningConfig.h.in  ScoreTracker.cpp  ScoreTracker.h  ScoreTrackerPlugin.cpp  ScoresFileWriter.cpp  ScoresFileWriter.h  build-standalone.sh  common.cpp  common.h  plugin.cfg  roms-without-game-state.md
.github/scripts/: notarize-macos.sh
.github/workflows/: build.yml  nightly-vpx.yml  pages.yml
.planning/debug/resolved/: companion-silent-on-launch.md
companion/: .gitignore  ARCHITECTURE.md  README.md  REQUIREMENTS.md  index.html  package-lock.json  package.json  tsconfig.json
companion/src/: main.ts  styles.css  types.ts
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/icons/: icon.icns
companion/src-tauri/src/: lib.rs  main.rs  nvram.rs  scores.rs  update.rs
config/: ScoreSigningConfig.h
installer/: Cargo.toml  build.rs
installer/macos/: Info.plist
installer/macos/scripts/: postinstall
installer/src/: main.rs
pages/: downloads.js  index.html  styles.css
scripts/: bump-version.py  check-version.py
tools/rom-map-lab/: README.md  batch_exercise.py  build_exerciser.sh  evidence.json  find_game_state.py  identify_game_state.py  map_lab.py  pinmame_exerciser.cpp  regen_nvram.py  test_capcom_decode.cpp
