[package]
name = "scoretracker-installer"
version = "0.1.0"
edition = "2021"
description = "Installer for the ScoreTracker VPX plugin"
license = "GPL-3.0-or-later"

[[bin]]
name = "scoretracker-installer"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[dependencies]
eframe = "0.29"
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }
