[package]
name = "scoretracker-installer"
version = "0.1.4"
edition = "2021"
description = "Installer for the ScoreTracker VPX plugin"
authors = ["Andre Santana"]
license = "GPL-3.0-or-later"

[[bin]]
name = "scoretracker-installer"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[dependencies]
eframe = "0.29"
flate2 = "1"
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"

[build-dependencies]
flate2 = "1"
tar = "0.4"
