[package]
name = "vpx-scoretracker-visualiser"
version = "0.1.0"
description = "Local game history for the ScoreTracker VPX plugin"
authors = ["Antigravity"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vpx_scoretracker_visualiser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
